Inform about new tree and lot of change in the sources organisation

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -8,6 +8,12 @@ Changelog  Copyright Eric Bachard  2020/04/22
 """"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 
 
+NEW REPOSITORY + NEW TREE
+
+
+2020 May 1st
+
+
 TODO : improve the demos (a bit confusing curently)
 Improved indentation
 Simplified the code
